--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tsx": "^4.11.0"
   },
   "dependencies": {
-    "datascript": "^1.6.5"
+    "datascript": "^1.6.5",
+    "date-fns": "^3.6.0"
   }
 }
