--- a/www/webapp/package.json
+++ b/www/webapp/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@app/core": "workspace:*",
+    "@tanstack/react-router": "^1.34.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.34.9",
+    "@tanstack/router-vite-plugin": "^1.34.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
