--- a/www/webapp/package.json
+++ b/www/webapp/package.json
@@ -13,7 +13,8 @@
     "@app/core": "workspace:*",
     "@tanstack/react-router": "^1.34.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.34.9",
